--- a/contact.html
+++ b/contact.html
@@ -5,73 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-image: url(https://static.vecteezy.com/system/resources/previews/022/572/467/non_2x/abstract-blurred-public-library-interior-space-blurry-room-with-bookshelves-by-defocused-effect-use-for-background-or-backdrop-in-business-or-education-concepts-generative-ai-photo.jpg);
-    background-size: cover;
-}
-.contact h1{
-    border: 2px solid lightgray;
-    text-shadow: 2px 1px 3px ;
-    display: flex;
-    justify-content: center;
-    z-index: 1;
-  
-}
-.contact h2{
-    display: flex;
-    justify-content: center;
-    z-index: 1;
-}
-.form1{
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    width: 350px;
-    height: 400px;
-    margin: 0px auto;
-    box-shadow: 2px 2px 4px;
-    z-index: 1;
-}
-.btn{
-    background-color: aquamarine;
-}
-.btn:hover{
-    background-color: grey;
-}
-.form-label{
-    font-size: 20px;
-}
-
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+        body{
+            font-family: 'outfit';
+            background: linear-gradient(#ffdad5,#fff7f9);
+        }
+        .contact{
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+        }
+        .contact-left{
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            gap: 20px;
+        }
+        .contact-title{
+            font-weight: 600;
+            color: purple;
+            font-size: 40px;
+            margin-bottom: 5px;
+        }
+        .contact-inputs{
+            width: 400px;
+            height: 50px;
+            border: none;
+            outline: none;
+            padding-left: 25px;
+            font-weight: 500;
+            color: #666;
+            border-radius: 50px;
+        }
+        .contact-left textarea{
+            height: 150px;
+            padding-top: 15px;
+            border-radius: 20px;
+        }
+        .contact-inputs:focus{
+            border: 2px solid violet;
+        }
+        .contact-left button{
+            height: 45px;
+            width: 80px;
+            border-radius: 10px;
+        }
+        .contact-right img{
+            width: 500px;
+            background-repeat: no-repeat;
+        }
     </style>
 </head>
 <body>
-    <main class="container my-5">
-        <div class="contact">
-        <h1>Contact Us for more Info..</h1>
-        <h2>If you have any questions, feel free to reach out to us!</h2></div>
-        <div class="form1">
-        <form action="./projectprac.html" method="post"><br>
-            <div class="mb-3">
-                <label for="name" class="form-label">Name:</label>
-                <input type="text" class="form-control" id="name" name="name" required>
-            </div><br>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-            </div><br>
-            <div class="mb-3">
-                <label for="message" class="form-label">Message:</label><br><br>
-                <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-            </div><br><br>
-            <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="contact">
+        <form action="" class="contact-left">
+            <div class="contact-title">
+               <h2>GET IN TOUCH</h2>
+            </div>
+            <input type="text" name="name" placeholder="your name" class="contact-inputs" required>
+            <input type="email" name="email" placeholder="your email" class="contact-inputs" required>
+            <textarea name="message" placeholder="your message" class="contact-inputs" required></textarea>
+            <button type="submit">Submit</button>
         </form>
+        <div class="contact-right">
+             <img src="./right_img.png" alt="">
+        </div>
     </div>
-    </main>
-    
-
-    <script src="./projectprac.js"></script>
 </body>
 </html>
