--- a/footer.html
+++ b/footer.html
@@ -174,7 +174,7 @@ footer {
             </div>
         </div>
         <div class="footer-bottom">
-        <p>© 2024 BooksToHome | Designed & Developed by <a href="./projectprac.html">Book Heaven</a></p>
+        <p>© 2025 Books Heaven | Designed & Developed by <a href="./projectprac.html">Book Heaven</a></p>
         </div>
 
 
